// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<div
  class="emotion-9 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`composition hook should return with SwitchField props 1`] = `
Object {
  "aria-describedby": "id-test",
  "aria-invalid": false,
  "aria-required": undefined,
  "children": <React.Fragment>
    <Box
      className="css-1g1ngb0 bb-SwitchHiddenInput"
      id="id-test"
      type="checkbox"
      use="input"
    />
    <Box
      className="css-c00kuf bb-SwitchIcon"
    />
  </React.Fragment>,
  "className": "css-i5mf5v css-63it0p css-jwhr8m bb-Box bb-Switch",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-SwitchField"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-14 {
  color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-9 emotion-0 emotion-14 test bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`overrides SwitchField.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-12 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-12 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should assign a ref via switchRef 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<input
  class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
  id="id-test"
  type="checkbox"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<div
  class="emotion-9 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for danger state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon {
  border-color: var(--bb-palette-danger,#000000);
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2:not(:checked) + .bb-SwitchIcon {
  box-shadow: var(--bb-palette-dangerTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<div
  class="emotion-9 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="true"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for success state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon {
  border-color: var(--bb-palette-success,#000000);
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2:not(:checked) + .bb-SwitchIcon {
  box-shadow: var(--bb-palette-successTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<div
  class="emotion-9 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly for warning state 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon {
  border-color: var(--bb-palette-warning,#000000);
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2:not(:checked) + .bb-SwitchIcon {
  box-shadow: var(--bb-palette-warningTint,#000000) 0px 0px 0px 3px !important;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<div
  class="emotion-9 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-14 {
  background-color: var(--bb-palette-primary,#000000) !important;
}

<div
  class="emotion-9 emotion-0 emotion-14 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with a switchLabel 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-10.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-9.emotion-9 {
  font-weight: 400;
}

.emotion-6 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-6::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-6::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-6:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-8 {
  margin-left: 0.5rem !important;
}

<div
  class="emotion-13 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-13 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-10 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
      <span
        class="emotion-6 emotion-0 emotion-8 emotion-9 bb-SwitchLabel bb-Box bb-Label"
        for="id-test"
        id="id-test"
      >
        Hello world
      </span>
    </label>
  </div>
</div>
`;

exports[`props should render correctly with checked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<div
  class="emotion-9 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        checked=""
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with defaultChecked 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<div
  class="emotion-9 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        checked=""
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with disabled 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<div
  class="emotion-9 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        disabled=""
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with isRequired 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<div
  class="emotion-9 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      aria-required="true"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with label 1`] = `
.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3.emotion-3.emotion-3 {
  margin-bottom: 0px;
}

.emotion-14.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-13 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-10 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-10:focus {
  outline: none;
}

.emotion-10 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-10[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-10[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-10:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-10:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-10:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-10:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-10[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-7 {
  margin-bottom: 0.75rem !important;
}

.emotion-5 {
  -webkit-align-items: center !important;
  -webkit-box-align: center !important;
  -ms-flex-align: center !important;
  align-items: center !important;
  display: -webkit-box !important;
  display: -webkit-flex !important;
  display: -ms-flexbox !important;
  display: flex !important;
  line-height: 1 !important;
}

.emotion-0 {
  display: block;
  font-weight: 600;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-0::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-0::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-0:not(:last-child) {
  margin-bottom: 6.671875px;
}

<div
  class="emotion-17 emotion-1 emotion-2 bb-Box bb-SwitchField"
>
  <div
    class="emotion-17 emotion-1 emotion-2 bb-Box bb-FieldWrapper"
  >
    <div
      class="emotion-1 emotion-7 bb-Box"
    >
      <div
        class="emotion-1 emotion-5 bb-Box"
      >
        <legend
          class="emotion-0 emotion-1 emotion-2 emotion-3 bb-FieldWrapperLabel bb-Box bb-Label"
        >
          Hello world
        </legend>
      </div>
    </div>
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-14 emotion-1 emotion-2 bb-Box bb-Switch"
    >
      <input
        class="emotion-1 emotion-2 emotion-10 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-1 emotion-2 emotion-13 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with name 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<div
  class="emotion-9 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        name="SwitchFieldRocks"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`props should render correctly with value 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

<div
  class="emotion-9 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
        value="SwitchFieldValue"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;

exports[`theming SwitchField.base should render correctly 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-6.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 {
  background-color: var(--bb-palette-default,#000000);
  border: 1px solid var(--bb-palette-gray100,#000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2 + .bb-SwitchIcon::before {
  background: var(--bb-palette-default,#000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100,#000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled] + .bb-SwitchIcon {
  background-color: var(--bb-palette-white700,#000000);
  box-shadow: unset;
}

.emotion-2[disabled] + .bb-SwitchIcon::before {
  background: var(--bb-palette-white700,#000000);
}

.emotion-2:focus + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  box-shadow: var(--bb-palette-primary100,#000000) 0px 0px 0px 3px !important;
}

.emotion-2:not([disabled]):checked + .bb-SwitchIcon {
  border-color: var(--bb-palette-primary,#000000);
  background-color: var(--bb-palette-primary,#000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked + .bb-SwitchIcon {
  background-color: var(--bb-palette-primary100,#000000);
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-2:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary,#000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked + .bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100,#000000);
}

.emotion-12 {
  background-color: var(--bb-palette-red,#ff0000);
}

<div
  class="emotion-12 emotion-0 emotion-1 bb-Box bb-SwitchField"
>
  <div
    class="emotion-9 emotion-0 emotion-1 bb-Box bb-FieldWrapper"
  >
    <label
      aria-describedby="id-test"
      aria-invalid="false"
      class="emotion-6 emotion-0 emotion-1 bb-Box bb-Switch"
    >
      <input
        class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
        id="id-test"
        type="checkbox"
      />
      <div
        class="emotion-0 emotion-1 emotion-5 bb-SwitchIcon bb-Box"
      />
    </label>
  </div>
</div>
`;
